--- a/Booking-App/frontend/book.html
+++ b/Booking-App/frontend/book.html
@@ -77,6 +77,6 @@
     </div>
     <!--JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
-    <script src="./index.js"></script>
+    <script src="./book.js"></script>
   </body>
 </html>
